# xai-gp

./: .gitignore  README.md  pyproject.toml
conf/: abl_config.yaml  config.yaml  hyperparam_deepgp.json  hyperparam_dspp.json  hyperparam_ensemble_mlp.json
conf/data/: casp.yaml  cifar10.yaml  cifar100.yaml  esr.yaml
conf/model/: deepgp.yaml  deepgp_casp.yaml  deepgp_esr.yaml  dspp.yaml  dspp_casp.yaml  dspp_esr.yaml  ensemble.yaml  ensemble_casp.yaml  ensemble_cla.yaml  ensemble_esr.yaml
conf/training/: ablation.yaml  default.yaml
results/weights/: DSPPModel_classification_model.pth  DSPPModel_regression_model.pth  DeepEnsembleClassifier_classification_model.pth  DeepEnsembleRegressor_regression_model.pth  DeepGPModel_classification_model.pth  DeepGPModel_regression_model.pth
tests/: dummy_classification_problem.py
tests/hyperparam_tuning/: test_bayesianoptimizer.py
tests/models/ensemble/: test_deepensembleclassifier.py  test_deepensembleregressor.py
xai_gp/: experiments.py  main.py
xai_gp/evaluation/: calibration.py  numpy_metrics.py
xai_gp/hyperparam_tuning/: bayesianoptimizer.py  hyperparameter_optimization.py  wrappers.py
xai_gp/models/: deepgp.py  deepgplayers.py  deepsigma.py  fitgp.py  gpbase.py
xai_gp/models/ensemble/: __init__.py  deepensembleclassifier.py  deepensembleregressor.py  ensemblebase.py  fitensemble.py  twoheadmlp.py
xai_gp/models/gp/: __init__.py  deepgp.py  fitgp.py  (+3 more)
xai_gp/utils/: boxplots.py  calibration.py  evaluation.py  logging.py  shift.py  shift_analysis.py  statistical_comparison.py  training.py  training_utils.py
