[tool.poetry]
name = "xai-gp"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
gpytorch = "^1.14"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
wandb = "^0.19.8"
loguru = "^0.7.3"
scipy = "^1.15.2"
hydra-core = "^1.3.2"
pytest = "^8.3.5"
botorch = "^0.13.0"
ax-platform = "^0.5.0"
jinja2 = "^3.1.6"
torchvision = "^0.21.0"
baycomp = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
